src/style/game.css
button,
input {
  height: 30px;
  min-width: 30px;
  font-size: 19px;
  padding: 1px 5px;
  background-color: whitesmoke;
  color: black;
  border: 2px solid whitesmoke;
  border-color: gainsboro;
  flex-grow: 1;
  fill: black;
  line-height: 0px;
  user-select: none;
}
button {
  cursor: pointer;
  margin-bottom: -2px;
}
.simulation-button {
  z-index: 1;
  width: fit-content;
}
.element-tray button.element-control {
  min-width: 30px;
  width: 30px;
  flex-grow: 0;
  font-size: 20px;
}
#worldCanvas {
  z-index: 1;
  width: 100%;
  border: 3px ridge gray;
  /* border-left: 1px solid black; */
  touch-action: pinch-zoom;
}

.element-tray button {
  min-width: 80px;
}
.shrink {
  transform: scale(0.8);
  filter: saturate(150%);
  transition: all 50ms linear;
  border-color: red !important;
}
.spacer {
  flex-grow: 10;
  width: auto;
}

.element-tray {
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;
  margin-bottom: 2px;
}
.update-scheme-tray {
  display: flex;
}
.extras-tray {
  display: flex;
  padding: 5px;
  flex-direction: column;
  flex-wrap: wrap;
}
.extras-tray .Auth {
  position: fixed;
  right: 5px;
  bottom: 60px;
}
.first-row {
  display: flex;
  justify-content: space-between;
}
.first-row span {
  display: flex;
}
.first-row * {
  flex-grow: 0;
}

textarea#json {
  width: 100%;
  height: 60px;
}
summary {
  font-size: 1rem;
  color: black;
}
.wordmark {
  position: fixed;
  bottom: 1px;
  width: 180px;
  right: 0px;
  margin-bottom: 0;
  pointer-events: none;
  /* image-rendering: pixelated; */
  /* opacity: 0.5; */
}

@media only screen and (max-width: 700px) {
  .extras-tray .Auth {
    position: relative;
    float: right;
    bottom: 0px;
  }
}

/* .family img {
  width: 100px;
  margin-right: 3px;
} */
.family img {
  border: 1px solid gainsboro;
}
.family img:hover {
  border: 1px solid blue;
}
.family .title-container {
  margin: 5px;

  font-size: 20px;
  font-weight: bold;
  flex-basis: 50px;
  flex-grow: 1;

  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  gap: 10px;

  text-align: center;
}

@media only screen and (max-width: 700px) {
  .family .title-container {
    font-size: 20px;
  }
}

.family .title {
  overflow-y: scroll;
  max-height: 180px;
}

.family .info {
  position: absolute;
  bottom: 3px;
}
.postThumbnail {
  position: relative;
}
.family {
  margin-top: 1.5em;
  display: flex;
  /* flex-direction: column; */
}
.post-group {
  display: flex;
  position: relative;
}

.group-title {
  position: absolute;
  top: -1.2em;
}

.featured-flag {
  margin-left: 5px;
}

.play-count {
  margin-left: 5px;
}

.browse-post-metadata-row {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 1px;
}

.post {
  background-color: rgba(250, 247, 247, 0.723);
  padding: 5px;
  margin-bottom: 6px;
  position: relative;
  display: flex;
}

.selected {
  box-shadow: 0 0 0 1px black inset;
  background-color: rgba(250, 247, 247, 1);
}

.post.placeholder {
  filter: grayscale(100%) contrast(0.5);
}

.postThumbnail {
  margin-right: 3px;
}

.postThumbnail img {
  width: 300px;
  height: 300px;

  max-width: calc(20vw - 6px - 10px);
  max-height: calc(20vw - 6px - 10px);
  min-width: 100px;
  min-height: 100px;

  /*width: 100%;
  height: 100%;*/
}

.browse-info {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  padding-bottom: 2px;
  max-width: 400px;
  /*max-width: calc(50vw - 5px);*/
}

.element-set-button {
  flex-grow: 0;
  height: auto;
  text-align: start;
  padding: 0px;
}

.pfp {
  border-radius: 100%;
  width: 50px !important;
  cursor: pointer;
}

button.selected {
  border-color: black;
  background: black;
  color: white;
  /* border-radius: 6px; */
  text-shadow: 1px 0px rgba(0, 0, 0, 0.5), -1px 0px rgba(0, 0, 0, 0.5),
    0px 1px rgba(0, 0, 0, 0.5), 0px -1px rgba(0, 0, 0, 0.5);
}
button:hover {
  filter: brightness(0.9);
}

